change discord to server

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <img src="./img/A_1.png" alt="logo" class="logo">
         <h1 class="heading">Invite Aware to your Guild!</h1>
-        <a href="https://discord.com/api/oauth2/authorize?client_id=819729378853257216&permissions=8&scope=bot" class="btn">Join my Discord</a>
+        <a href="https://discord.com/api/oauth2/authorize?client_id=819729378853257216&permissions=8&scope=bot" class="btn">Join my server</a>
     </div>
 </body>
 
