--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <div class="container">
         <img src="./img/A_1.png" alt="logo" class="logo">
         <h1 class="heading">Invite Aware to your Discord</h1>
-        <a href="https://discord.com/api/oauth2/authorize?client_id=819729378853257216&permissions=8&scope=bot" class="btn">Invite me</a>
+        <div class="button__container">
+            <a href="https://discord.com/api/oauth2/authorize?client_id=819729378853257216&permissions=8&scope=bot" class="btn">Aware</a>
+            <a href="https://discord.com/api/oauth2/authorize?client_id=821226080722747428&permissions=8&scope=bot" class="btn">Aware AI</a>
+        </div>
     </div>
 </body>
 
